--- a/index.html
+++ b/index.html
@@ -1,140 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lending Decoder</title>
-    <style>
-        body {
-            background-color: #141d26;
-            color: #fff;
-            font-family: Arial, sans-serif;
-        }
-
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-            padding: 20px;
-            border: 1px solid #666;
-            border-radius: 5px;
-        }
-
-        .field {
-            margin-bottom: 15px;
-        }
-
-        .field label {
-            display: block;
-            font-size: 14px;
-            margin-bottom: 5px;
-            color: #b9b9b9;
-        }
-
-        .field input[type="text"],
-        .field input[type="email"],
-        .field input[type="tel"],
-        .field textarea {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid #555;
-            border-radius: 5px;
-            background-color: #222;
-            color: #fff;
-            font-family: Arial, sans-serif;
-            font-size: 14px;
-            line-height: 1.6;
-            outline: none;
-            transition: border-color 0.3s ease-in-out;
-        }
-
-        .field input[type="text"]::placeholder,
-        .field input[type="email"]::placeholder,
-        .field input[type="tel"]::placeholder,
-        .field textarea::placeholder {
-            color: #b9b9b9;
-        }
-
-        .field input[type="text"]:focus,
-        .field input[type="email"]:focus,
-        .field input[type="tel"]:focus,
-        .field textarea:focus {
-            border-color: #6a00b5;
-        }
-
-        .field select {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid #555;
-            border-radius: 5px;
-            background-color: #222;
-            color: #fff;
-        }
-
-        .decode-button {
-            text-align: center;
-        }
-
-        button {
-            margin-top: 15px;
-            padding: 8px 12px;
-            background-color: #6a00b5;
-            border: none;
-            border-radius: 5px;
-            color: #fff;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #4b0082;
-        }
-    </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lending - Home</title>
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      color: white;
+      background-color: #252525;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .content {
+      text-align: center;
+    }
+    .button {
+      display: inline-block;
+      padding: 10px 20px;
+      margin: 10px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      text-decoration: none;
+    }
+    .button:hover {
+      background-color: #0069d9;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <div class="field">
-            <label for="jsonInput">Paste your JSON data here</label>
-            <textarea id="jsonInput" placeholder="Paste your JSON data here"></textarea>
-        </div>
-        <div class="field">
-            <label for="name">Name</label>
-            <input type="text" id="name" disabled>
-        </div>
-        <div class="field">
-            <label for="loan-type">Loan Type</label>
-            <input type="text" id="loan-type" disabled>
-        </div>
-        <div class="field">
-            <label for="phone-number">Phone Number</label>
-            <input type="tel" id="phone-number" disabled>
-        </div>
-        <div class="field">
-            <label for="email">Email</label>
-            <input type="email" id="email" disabled>
-        </div>
-        <div class="field">
-            <label for="message">Message</label>
-            <textarea id="message" disabled></textarea>
-        </div>
-        <div class="decode-button">
-            <button onclick="decodeJson()">Decode</button>
-        </div>
-    </div>
-
-    <script>
-        function decodeJson() {
-            const jsonData = document.getElementById('jsonInput').value.trim();
-            try {
-                const parsedData = JSON.parse(jsonData);
-
-                document.getElementById('name').value = parsedData['fields[name][value]'];
-                document.getElementById('loan-type').value = parsedData['fields[field_2fb49df][value]'];
-                document.getElementById('phone-number').value = parsedData['fields[field_5160f12][value]'];
-                document.getElementById('email').value = parsedData['fields[email][value]'];
-                document.getElementById('message').value = parsedData['fields[message][value]'];
-            } catch (error) {
-                alert('Error decoding JSON. Please make sure the JSON data is valid.');
-            }
-        }
-    </script>
+  <div class="content">
+    <h1>Welcome to Lending!</h1>
+    <p>Select an option:</p>
+    <a href="main/index.html" class="button">Load main script/Home</a>
+    <a href="exp.html" class="button">E1xample</a>
+    <a href="How2GetData.html" class="button">How two get web hook data</a>
+  </div>
 </body>
 </html>
